sumo/tests/sumo/extended/vaporizer/errors/end_empty/tripinfos.sumo
<?xml version="1.0"?>

<!-- generated on 05/27/08 15:49:56 by SUMO sumo Version 0.9.7
<configuration>

   <input>
      <net-file>three_split.net.xml</net-file>
      <additional-files>input_routes.rou.xml,input_additional.add.xml,input_additional2.add.xml</additional-files>
   </input>

   <output>
      <tripinfo-output>tripinfos.xml</tripinfo-output>
   </output>

   <time>
      <begin>0</begin>
   </time>

   <processing>
      <no-duration-log>true</no-duration-log>
      <no-step-log>true</no-step-log>
   </processing>

</configuration>
-->

<tripinfos>
</tripinfos>
